<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/layout">

    <data>
        <variable
                name="myCredentials"
                type="com.example.terasystemhris.MyCredentials"/>
    </data>

    <ScrollView
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fillViewport="true"
            android:background="@drawable/homebg">

        <androidx.constraintlayout.widget.ConstraintLayout

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:context=".MainActivity">

            <ImageView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    app:srcCompat="@drawable/terasystemlogo"
                    android:id="@+id/tera_logo"
                    android:contentDescription="@string/tera_logo"
                    app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginStart="16dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:layout_marginEnd="16dp"
                    app:layout_constraintHorizontal_bias="1.0"
                    app:layout_constraintTop_toTopOf="parent"
                    android:layout_marginTop="24dp"/>

            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:animateLayoutChanges="true"
                    android:orientation="vertical"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="1.0"
                    android:id="@+id/linearLayout"
                    android:layout_marginStart="16dp"
                    android:layout_marginEnd="16dp"
                    app:layout_constraintTop_toBottomOf="@+id/tera_logo">

                <EditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textPersonName"
                        android:text=""
                        android:ems="10"
                        android:id="@+id/userId_edit"
                        style="@style/NameStyle"
                        android:hint="@string/what_is_your_userID"
                        android:autofillHints=""
                        android:fontFamily="@font/roboto"
                        />

                <EditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textPassword"
                        android:ems="10"
                        android:id="@+id/password_edit"
                        android:hint="@string/what_is_your_password"
                        android:autofillHints=""
                        style="@style/NameStyle"
                        />

                <Button
                        android:text="@string/login"
                        style="@style/Widget.AppCompat.Button.Colored"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:fontFamily="@font/roboto"
                        android:id="@+id/login_button"
                        android:background="#1D8ECE"
                        />

            </LinearLayout>

            <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    app:layout_constraintTop_toBottomOf="@+id/linearLayout"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:layout_marginEnd="8dp"
                    app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginStart="8dp"
                    android:layout_marginBottom="8dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintVertical_bias="1.0">

                <Button
                        android:text="@string/signup"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical|center_horizontal"
                        android:id="@+id/signup_button"
                        android:background="@null"
                        android:textColor="#048dc9"
                        />
            </LinearLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

</layout>